// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Literal Basic properties 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.TypeLiteral(function (typeLiteral) {
    typeLiteral.property(\\"a\\", _runtime.default.NumberKeyword, false, []);
    typeLiteral.property(\\"b\\", _runtime.default.Literal(1), false, []);
    typeLiteral.property(\\"c\\", _runtime.default.StringKeyword, true, []);
    typeLiteral.property(\\"d\\", _runtime.default.ArrayType(_runtime.default.StringKeyword), false, []);
  });

  return type;
}, []);"
`;

exports[`Type Literal Object Indexer 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.TypeLiteral(function (typeLiteral) {
    typeLiteral.property(\\"a\\", _runtime.default.StringKeyword, false, []);
    typeLiteral.computedProperty(\\"key\\", _runtime.default.StringKeyword, _runtime.default.NumberKeyword, 0, false, []);
  });

  return type;
}, []);"
`;
